[gd_scene load_steps=8 format=3 uid="uid://dc0roxex60i7i"]

[ext_resource type="Script" uid="uid://cnbo6wbegh07u" path="res://game/ui/Button.gd" id="1_062cg"]
[ext_resource type="Texture2D" uid="uid://crvfuvgb83sn" path="res://assets/sprites/Button_Base.png" id="1_gm44i"]
[ext_resource type="FontFile" uid="uid://r7lmqbnugoso" path="res://assets/fonts/editundo.ttf" id="2_062cg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sc8sk"]
atlas = ExtResource("1_gm44i")
region = Rect2(1, 1, 126, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j3hi"]
atlas = ExtResource("1_gm44i")
region = Rect2(1, 65, 126, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_u5e1i"]
atlas = ExtResource("1_gm44i")
region = Rect2(1, 33, 126, 30)

[sub_resource type="LabelSettings" id="LabelSettings_u5e1i"]
font = ExtResource("2_062cg")
font_size = 25

[node name="Button" type="CenterContainer"]
script = ExtResource("1_062cg")

[node name="ButtonBase" type="TextureButton" parent="."]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
texture_normal = SubResource("AtlasTexture_sc8sk")
texture_pressed = SubResource("AtlasTexture_6j3hi")
texture_hover = SubResource("AtlasTexture_u5e1i")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Button"
label_settings = SubResource("LabelSettings_u5e1i")

[connection signal="button_down" from="ButtonBase" to="." method="_on_button_base_button_down"]
[connection signal="mouse_entered" from="ButtonBase" to="." method="_on_button_base_mouse_entered"]
[connection signal="mouse_exited" from="ButtonBase" to="." method="_on_button_base_mouse_exited"]
[connection signal="pressed" from="ButtonBase" to="." method="_on_button_base_pressed"]
